--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 masonite>=2.3,<2.4
 masonite-logging>=1.0,<2.0
 masonite-validation>=3.0,<4.0
+masonite-scheduler>=3.0,<4.0
 gunicorn==19.9.0
 web3==5.17
