--- a/.env-example
+++ b/.env-example
@@ -29,6 +29,9 @@ STRIPE_SECRET=
 
 STORAGE_DRIVER=disk
 
+AWS_CLIENT="AKIASOZP2ZJCMTE7GJY5"
+AWS_SECRET="tx6zJW9DjY4byxsuJSe7iYXgY74DWcvmq87y8539"
+
 S3_CLIENT=
 S3_SECRET=
 S3_BUCKET=
