--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 masonite>=2.3,<2.4
+masonite-cli==2.1.2
 masonite-logging>=1.0,<2.0
 masonite-validation>=3.0,<4.0
 masonite-scheduler>=3.0,<4.0
 gunicorn==19.9.0
 web3==5.17
 boto3==1.9.109
-beautifulsoup4==4.9
+requests_html==0.10
+bs4==0.0.1
